infra/k8s/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: ken027/ticketing-auth-service
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-service
spec:
  selector:
    app: auth-mongo
  ports:
    - name: auth-mongo-port
      protocol: TCP
      port: 27017
      targetPort: 27017
