infra/k8s/order.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: ken027/ticketing-order-service
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-mongo
  template:
    metadata:
      labels:
        app: order-mongo
    spec:
      containers:
        - name: order-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: order-mongo-service
spec:
  selector:
    app: order-mongo
  ports:
    - name: order-mongo-port
      protocol: TCP
      port: 27017
      targetPort: 27017
