infra/k8s/payment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: ken027/ticketing-payment-service
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: payment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
        - name: payment-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: payment-mongo-service
spec:
  selector:
    app: payment-mongo
  ports:
    - name: payment-mongo-port
      protocol: TCP
      port: 27017
      targetPort: 27017
